--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,1 +1,136 @@
+h1 {
+    font-size: 30px;
+    color: rgb(215, 180, 38);
+    text-align: center;
+    padding: 1em;
+    margin: 0 auto;
+    text-shadow: 3px 3px 1px black;
+}
+.name {
+    display: flex;
+    justify-content: flex-end;
+}
 
+html {
+    font-size: 15px; /* px 表示“像素（pixel）”: 基础字号为 10 像素 */
+}
+img {
+    display: block;
+    margin: 0 auto;
+}
+figcaption {
+    display: flex;
+    justify-content: center;
+}
+main {
+    margin: 5px;
+    border-radius: 10px;
+    flex: 2;
+    background: linear-gradient(to bottom left, #FBEAFF, #C4FCEF);
+    background-attachment: fixed;
+  
+}
+aside {
+    margin: 5px;
+    border-radius: 10px;
+    flex: 1;
+    background-color: pink;
+    
+}
+footer {
+    margin: 5px;
+    border-radius: 10px;
+    flex: 100vw;
+}
+nav {
+    margin: 5px;
+    border-radius: 10px;
+    height: 20vh;
+    background: linear-gradient(to bottom left, #dc3709, #d7e913);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex: 100vw;
+    
+}
+nav ul{
+    display: flex;
+    justify-content: space-evenly;
+}
+dl {
+    margin: 0;
+}
+body{
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+}
+footer {
+    border: #C4FCEF solid 3px ;
+    background-color: rgb(223, 189, 189);
+}
+form {
+    /* 居中表单 */
+    margin: 0 auto;
+    width: 400px;
+    /* 显示表单的轮廓 */
+    padding: 1em;
+    border: 3px solid #ccc;
+    border-radius: 1em;
+  }
+  
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  form li + li {
+    margin-top: 1em;
+  }
+  
+  label {
+    /* 确保所有 label 大小相同并正确对齐 */
+    display: inline-block;
+    width: 90px;
+    text-align: right;
+  }
+  
+  input,
+  textarea {
+    /* 确保所有文本输入框字体相同
+       textarea 默认是等宽字体 */
+    font: 1em sans-serif;
+  
+    /* 使所有文本输入框大小相同 */
+    width: 300px;
+    box-sizing: border-box;
+  
+    /* 调整文本输入框的边框样式 */
+    border: 1px solid #999;
+  }
+  
+  input:focus,
+  textarea:focus {
+    /* 给激活的元素一点高亮效果 */
+    border-color: #000;
+  }
+  
+  textarea {
+    /* 使多行文本输入框和它们的 label 正确对齐 */
+    vertical-align: top;
+  
+    /* 给文本留下足够的空间 */
+    height: 5em;
+  }
+  
+  .button {
+    /* 把按钮放到和文本输入框一样的位置 */
+    padding-left: 90px; /* 和 label 的大小一样 */
+  }
+  
+  button {
+    /* 这个外边距的大小与 label 和文本输入框之间的间距差不多 */
+    margin-left: 0.5em;
+  }
+  
